components/cilium/ingress-hubble-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ui
  namespace: cilium
  annotations:
    kube-vip.io/loadbalancerIPs: 192.168.13.4
    cert-manager.io/cluster-issuer: "local-ca-issuer"
spec:
  ingressClassName: cilium
  rules:
  - host: hubble.nekropolis.irminsul
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hubble-ui
            port:
              number: 80
  tls:
  - hosts:
    - hubble.nekropolis.irminsul
    secretName: hubble-ui
