components/cilium/ciliumclusterwidenetworkpolicy.yaml
# each individual endpoint will have to specify that it wants to be reachable from the ingress anyway
# so there is no harm in allowing this side, and it saves us work
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-reserved-envoy-egress
spec:
  description: "Allow all egress traffic from reserved ingress identity to any endpoints in the cluster"
  endpointSelector:
    matchExpressions:
    - key: reserved:ingress
      operator: Exists
  # egress to cluster allowed, not to world
  egress:
  - toEntities:
    - cluster

# TODO: We should be more restrictive with what we allow. If we apply clusterwide
# policies to egress / ingress, all endpoints will switch to default deny, which would be neat
#---
#apiVersion: cilium.io/v2
#kind: CiliumClusterwideNetworkPolicy
#metadata:
#  name: allow-ingress-egress
#spec:
#  description: "Allow egress to internal DNS from all endpoints"
#  # match all endpoints 
#  endpointSelector: {}
#  egress:
#  - toEndpoints:
#    - matchLabels:
#        k8s:io.kubernetes.pod.namespace: kube-system
#        k8s:k8s-app: kube-dns
#    toPorts:
#    - ports:
#      - port: "53"
#        protocol: UDP
#      - port: "53"
#        protocol: TCP
